// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto2";

package protobuf.contrib.immutablejs.protos;

option java_multiple_files = true;

message Pivot {

  optional string payload = 1;
  optional string payload2 = 501;  // Passes beyond default pivot.

  extensions 1000 to 10000;
}

message PivotWithoutMessageId {
  optional string payload = 1;

  extensions 1000 to 10000;
}

message PivotWithoutMessageIdAndExtension {
  optional string payload = 1;
  optional string payload2 = 501;  // Passes beyond default pivot.
}

message PivotOnlyExtensions {

  extensions 1 to max;
}

message PivotWithoutMessageIdOnlyExtensions {
  extensions 1 to max;
}

extend Pivot {
  optional Pivot pivot_extension = 1000;
}

extend PivotWithoutMessageId {
  optional PivotWithoutMessageId pivot_no_msgid_extension = 1000;
}

extend PivotOnlyExtensions {
  optional string only_extensions_extension = 1;
}

extend PivotWithoutMessageIdOnlyExtensions {
  optional string no_msgid_only_extensions_extension = 1;
}
